--- a/ssi/ask-bar.html
+++ b/ssi/ask-bar.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="panel">
-            <a class="btn btn-primary ask-button collapsed" role="button" data-toggle="collapse" data-parent="#askGroup" href="#ViewSamples" aria-expanded="true" aria-controls="ViewSamples"><span class="ca-gov-icon-gears" aria-hidden="true"></span>View sample pages</a>
+            <a class="btn btn-primary ask-button collapsed" role="button" data-toggle="collapse" data-parent="#askGroup" href="#ViewSamples" aria-expanded="true" aria-controls="ViewSamples"><span class="ca-gov-icon-gears" aria-hidden="true"></span>View examples</a>
             <div id="ViewSamples" class="collapse ask-panel">
                 <div class="ask-options">
                     <ul>
