--- a/ssi/utility-header.html
+++ b/ssi/utility-header.html
@@ -1,21 +1,16 @@
 <div class="utility-header">
     <div class="container">
-        <div class="group">
-            <div class="half">
-                 
-                <ul class="utility-links social-media-links">
-                    <li><div class="header-cagov-logo"><a href="https://ca.gov"><img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov" /></a></div></li>
-                    <li><a href="/"><span class="ca-gov-icon-home" aria-hidden="true"></span><span class="sr-only">Home</span></a></li>
-                    <li><a href="/" class="ca-gov-icon-facebook" title="Share via Facebook"><span class="sr-only">Facebook</span></a></li>
-                    <li><a href="/" class="ca-gov-icon-twitter" title="Share via Twitter"><span class="sr-only">Twitter</span></a></li>        
-                    <li><a href="/" class="ca-gov-icon-email" title="Share via email"><span class="sr-only">Email</span></a></li>
-                </ul>
+        <div class="group flex-row">
+            <div class="social-media-links">
+                <div class="header-cagov-logo"><a href="https://ca.gov"><span class="sr-only">CA.gov</span><img src="/images/Ca-Gov-Logo-Gold.svg" class="pos-rel" alt="" aria-hidden="true" /></a></div>
+                <a href="/" class="ca-gov-icon-home"><span class="sr-only">Home</span></a>
+                <a href="/" class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></a>
+                <a href="/" class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></a>
+                <a href="/" class="ca-gov-icon-email"><span class="sr-only">Email</span></a>
             </div>
-            <div class="half settings-links">
-                <ul class="utility-links ">
-                    <li><a href="/contact.html">Contact Us</a></li>
-                    <li><button class="btn btn-xs btn-primary" id="settings-btn" data-toggle="collapse" href="#siteSettings"><span class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</button></li>
-                </ul>
+            <div class="settings-links">
+                <a href="/contact.html"><span class="ca-gov-icon-contact-us" aria-hidden="true"></span> Contact Us</a>
+                <button class="btn btn-xs btn-primary" data-toggle="collapse" data-target="#siteSettings" aria-expanded="false" aria-controls="siteSettings"><span class="ca-gov-icon-gear" aria-hidden="true"></span> Settings</button>
             </div>
         </div>
     </div>
