Fixed accessibility errors (Link text used for multiple different destinations) in panes section and footer

--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -6,7 +6,7 @@
                 <ul class="list-standout">
                     <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
                     <li><a href="http://saveourwater.com/" class="text-white">Save Our Water</a></li>
-                    <li><a href="http://www.flexalert.org/" class="text-white">Flex Alert</a></li>
+                    <li><a href="https://census.ca.gov/" class="text-white">Census 2020</a></li>
                     <li><a href="http://caloes.ca.gov/ICESite/Pages/Summer-Heat-Resources.aspx" class="text-white">Beat the Heat</a></li>
                 </ul>
                 <a href="#" class="btn btn-primary m-t">Register</a>
