Fixed the following Site Improvement Flags Contact Widget: Info and Relationships 1.3.1 (4 instances) 	- Label is not connected to a form control (4 instances) Link Purpose 2.4.4 (4 instances) 	- Link text used for multiple different destinations (4 instances) Event List: Link Purpose 2.4.4 (4 instances) 	- Link text used for multiple different destinations (4 instances) Exam List: Contrast (Minimum) 1.4.3 (4 instances) 	- Color contrast is insufficient (4 instances) Headers: Info and Relationships 1.3.1 (1 instance) 	- Label is not connected to a form control (1 instance) Hero Info: Info and Relationships 1.3.1 (1 instance) 	- Label is not connected to a form control (1 instance) Icon Blocks: Info and Relationships 1.3.1 (3 instances) 	- Label is not connected to a form control (3 instances) Link Purpose 2.4.4 (3 instances) 	- Link text is too generic in its current context (3 instances) Info Blocks: Info and Relationships 1.3.1 (1 instances) 	- Label is not connected to a form control (1 instances) Lists (Bulleted & Expanding): Info and Relationships 1.3.1 (6 instances) 	- Label is not connected to a form control (6 instances) Location Widgets: Link Purpose 2.4.4 (6 instances) 	- Link text used for multiple different destinations (6 instances) News Blocks: Info and Relationships 1.3.1 (2 instances) 	- Label is not connected to a form control (2 instances) Link Purpose 2.4.4 (7 instances) 	- Link text is too generic in its current context (3 instances) 	- Link text used for multiple different destinations (4 instances) News List: Info and Relationships 1.3.1 (1 instances) 	- Label is not connected to a form control (1 instances) Profile Banners: Link Purpose 2.4.4 (6 instances) 	- Link text used for multiple different destinations (6 instances) Publications: Contrast (Minimum) 1.4.3 (12 instances) 	- Color contrast is insufficient (12 instances)

--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -83,8 +83,8 @@ Based on Twitter Bootstrap
             
             <div class="tab-group">
                 <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                    <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                    <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="Markup for Event List">HTML Markup</a></li>
+                    <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Event List">Microdata</a></li>
                 </ul>
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
@@ -110,8 +110,8 @@ Based on Twitter Bootstrap
             
             <div class="tab-group">
                 <ul id="sourceCodeThumb" class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#thumbhtml" role="tab" data-toggle="tab">HTML Markup</a></li>
-                    <li><a href="#thumbmicrodata" role="tab" data-toggle="tab">Microdata</a></li>
+                    <li class="active"><a href="#thumbhtml" role="tab" data-toggle="tab" aria-label="Markup for Event List with Thumbnails">HTML Markup</a></li>
+                    <li><a href="#thumbmicrodata" role="tab" data-toggle="tab" aria-label="Microdata for Event List with Thumbnails">Microdata</a></li>
                 </ul>
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
