--- a/sample/headers.html
+++ b/sample/headers.html
@@ -73,7 +73,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/headers.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-headers">Source Code:</label></h2>
+                    <h2><strong aria-label="Source Code for Headers & Paragraphs">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/headers.html" --></code></pre>
                 </div> 
             </div>
