--- a/sample/hero-info.html
+++ b/sample/hero-info.html
@@ -85,7 +85,7 @@ Based on Twitter Bootstrap
                             
                         </div>
                         <div class="modal-body">
-                            <label for="sample-news-list-sidebar">Source Code:</label>
+                            <strong aria-label="Source Code for Hero Info">Source Code:</strong>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/hero-info.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
