--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -95,7 +95,7 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-news-blocks">Source Code:</label>
+                                        <strong aria-label="Source Code for Icon Blocks">Source Code:</strong>
                                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/icon-blocks.html" --></code></pre>
                                     </div>
                                     <div class="modal-footer">
@@ -125,7 +125,7 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-image-blocks">Source Code:</label>
+                                        <strong aria-label="Source Code for Icon Image Blocks">Source Code:</strong>
                                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></code></pre>
                                     </div>
                                     <div class="modal-footer">
@@ -160,7 +160,7 @@ Based on Twitter Bootstrap
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-links">Source Code:</label>
+                            <strong aria-label="Source Code for Icon Links">Source Code:</strong>
                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/icon-links.html" --></code></pre>
                         </div>
                         <div class="modal-footer">
