--- a/sample/info-blocks.html
+++ b/sample/info-blocks.html
@@ -96,7 +96,7 @@ Based on Twitter Bootstrap
 
                     </div>
                     <div class="modal-body">
-                        <label for="sample-news-list-sidebar">Source Code:</label>
+                        <strong aria-label="Source code for Info Blocks">Source Code:</label>
                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/info-blocks.html" --></code></pre>
                     </div>
                     <div class="modal-footer">
