--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -32,7 +32,7 @@
 
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
+                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email DMV">
                             <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
@@ -80,7 +80,7 @@
 
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
+                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDT">
                             <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
@@ -128,7 +128,7 @@
 
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
-                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
+                        <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#" aria-label="Email CDTFA">
                             <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
                         </a>
                     </li>
