--- a/sample/modules/news-image.html
+++ b/sample/modules/news-image.html
@@ -17,7 +17,7 @@
                 </small>
             </header>
 
-            <a class="news-link" href="#">Read More</a>
+            <a class="news-link" href="#">Read More about DMV</a>
         </article>
         <!-- End Article -->
     </div>
@@ -39,7 +39,7 @@
                 </small>
             </header>
 
-            <a class="news-link" href="#">Read More</a>
+            <a class="news-link" href="#">Read More about CDT</a>
         </article>
         <!-- End Article -->
     </div>
@@ -61,7 +61,7 @@
                 </small>
             </header>
 
-            <a class="news-link" href="#">Read More</a>
+            <a class="news-link" href="#">Read More about CDTFA</a>
         </article>
         <!-- End Article -->
     </div>
