--- a/sample/news-list.html
+++ b/sample/news-list.html
@@ -128,7 +128,7 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-news-list-sidebar">Source Code:</label>
+                                        <strong aria-label="Source Code for News List">Source Code:</strong>
                                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/news-list-sidebar.html" --></code></pre>
                                     </div>
                                     <div class="modal-footer">
