--- a/sample/profile-banners.html
+++ b/sample/profile-banners.html
@@ -73,8 +73,8 @@ Based on Twitter Bootstrap
 
                     <div class="tab-group">
                         <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                            <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                            <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="HTML Markup for Profile Banner">HTML Markup</a></li>
+                            <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Profile Banner">Microdata</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
@@ -101,8 +101,8 @@ Based on Twitter Bootstrap
 
                     <div class="tab-group">
                         <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#html2" role="tab" data-toggle="tab">HTML Markup</a></li>
-                            <li><a href="#microdata2" role="tab" data-toggle="tab">Microdata</a></li>
+                            <li class="active"><a href="#html2" role="tab" data-toggle="tab" aria-label="HTML Markup for Profile Banner Vertical Layout">HTML Markup</a></li>
+                            <li><a href="#microdata2" role="tab" data-toggle="tab" aria-label="Microdata for Profile Banner Vertical Layout">Microdata</a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
