--- a/sample/contact-widgets.html
+++ b/sample/contact-widgets.html
@@ -73,8 +73,8 @@ Based on Twitter Bootstrap
                     
                      <div class="tab-group">
                         <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#cardhtml" role="tab" data-toggle="tab"><label for="within-card-html">HTML Markup</label></a></li>
-                            <li><a href="#cardmicrodata" role="tab" data-toggle="tab"><label for="within-card-microdata">Microdata</label></a></li>
+                            <li class="active"><a href="#cardhtml" role="tab" data-toggle="tab" aria-label="HTML Markup for Example Within Card"><strong>HTML Markup</strong></a></li>
+                            <li><a href="#cardmicrodata" role="tab" data-toggle="tab" aria-label="Microdata for Example Within Card"><strong>Microdata</strong></a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
@@ -100,8 +100,8 @@ Based on Twitter Bootstrap
                     <h2>Source Code:</h2>
                      <div class="tab-group">
                         <ul id="sourceCode2" class="nav nav-tabs" role="tablist">
-                            <li class="nav-item"><a class="nav-link active" href="#html" role="tab" data-toggle="tab" aria-selected="true"><label for="without-card-html">HTML Markup</label></a></li>
-                            <li class="nav-item"><a class="nav-link" href="#microdata" role="tab" data-toggle="tab" aria-selected="false"><label for="without-card-microdata">Microdata</label></a></li>
+                            <li class="nav-item"><a class="nav-link active" href="#html" role="tab" data-toggle="tab" aria-selected="true" aria-label="HTML Markup for Example Without Card"><strong>HTML Markup</strong></a></li>
+                            <li class="nav-item"><a class="nav-link" href="#microdata" role="tab" data-toggle="tab" aria-selected="false" aria-label="Microdata for Example Without Card"><strong>Microdata</strong></a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
