--- a/sample/lists.html
+++ b/sample/lists.html
@@ -71,7 +71,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/list-overstated.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-list-a">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for List Overstated">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/list-overstated.html" --></code></pre>
                 </div> 
             </div>
@@ -85,7 +85,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/list-understated.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-list-b">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for List Understated">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/list-understated.html" --></code></pre>
                 </div> 
             </div>
@@ -99,7 +99,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/list-standout.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-list-c">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for List Standout">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/list-standout.html" --></code></pre>
                 </div> 
             </div>
@@ -117,7 +117,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/accordion-list.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-accordion-list">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for Accordion List">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/accordion-list.html" --></code></pre>
                 </div> 
             </div>
@@ -130,7 +130,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/list-multi-ordered.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-list-multi-ordered">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for Multi-Tiered Ordered List">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/list-multi-ordered.html" --></code></pre>
                 </div> 
             </div>
@@ -143,7 +143,7 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/list-multi-unordered.html" -->
                 </div>
                 <div class="half">
-                    <h2><label for="sample-list-multi-unordered">Source Code:</label></h2>
+                    <h2><strong aria-label="Source code for Multi-Tiered Unordered List">Source Code:</strong></h2>
                     <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/list-multi-unordered.html" --></code></pre>
                 </div> 
             </div>
