--- a/sample/modules/icon-blocks.html
+++ b/sample/modules/icon-blocks.html
@@ -8,7 +8,7 @@
             </span>
             <h3 class="h4 m-b-sm">Incredible standard post</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase font-size-sm" href="#">Read More</a>
+            <a class="text-uppercase font-size-sm" href="#">Read More about standard posts</a>
         </div>
         <!-- End Icon Blocks -->
     </div>
@@ -20,7 +20,7 @@
             </span>
             <h3 class="h4 m-b-sm">Job Opportunities</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase font-size-sm" href="#">Read More</a>
+            <a class="text-uppercase font-size-sm" href="#">Read More about Job Opportunities</a>
         </div>
         <!-- End Icon Blocks -->
     </div>
@@ -32,7 +32,7 @@
             </span>
             <h3 class="h4 m-b-sm">State Training</h3>
             <p class="m-b">Curabitur ut augue at mi eleifend lobortis. Ut tincidunt lacinia nisi pharetra.</p>
-            <a class="text-uppercase font-size-sm" href="#">Read More</a>
+            <a class="text-uppercase font-size-sm" href="#">Read More about State Training</a>
         </div>
         <!-- End Icon Blocks -->
     </div>
