--- a/sample/modules/profile-banners.html
+++ b/sample/modules/profile-banners.html
@@ -14,7 +14,7 @@
 
             </div>
             <hr class="m-t-sm m-b-0" />
-            <a href="" class="font-size-12">Website</a>
+            <a href="" class="font-size-12" aria-label="Link to Normal Layout">Website</a>
             <!-- End Figure Info -->
         </div>
     </div>
