--- a/sample/news-blocks.html
+++ b/sample/news-blocks.html
@@ -86,7 +86,7 @@ Based on Twitter Bootstrap
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                                         </div>
                                         <div class="modal-body">
-                                            <label for="sample-news-blocks">Source Code:</label>
+                                            <strong aria-label="Source Code for News Block">Source Code:</strong>
                                             <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/news-block.html" --></code></pre>
                                         </div>
                                         <div class="modal-footer">
@@ -112,7 +112,7 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-image-blocks">Source Code:</label>
+                                        <strong aria-label="Source Code for News Images Blocks">Source Code:</strong>
                                         <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/news-image.html" --></code></pre>
                                     </div>
                                     <div class="modal-footer">
